# psychiatrist-langgraph-mlops

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  SAFETY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: care_plan.py  dsm_literature.py  graph.py  risk.py  safety_critic.py  screening.py  state.py
data/: generate.py
models/: train.py
models/clinical_nlp/: dataset.py  finetune.py  predict.py  quantize.py
models/severity/: MODEL_CARD.md  evaluation.py  features.py  ordinal.py  torch_mlp.py  xgboost_model.py
monitoring/: audit_log.py  drift_report.py  safety_audit.py
psychiatrist/: __init__.py  cli.py
rag/: chain.py  eval.py  ingest_dsm_summaries.py  ingest_pubmed.py  retriever.py
serving/: api.py  app.py  components.py
spark_jobs/: reddit_cohort.py  synthetic_screening.py
tests/: conftest.py
tests/safety/: suicide_risk_cases.py  test_safety_critic.py
tests/unit/: test_synthetic_screening.py
