[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psychiatrist"
version = "0.1.0"
description = "Agentic mental-health triage and clinical decision support system (portfolio project)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Harisankar" }]

dependencies = [
    # Core scientific stack
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",

    # Classical ML
    "xgboost>=2.0",
    "lightgbm>=4.1",
    "mord>=0.7",
    "shap>=0.44",

    # Deep learning + NLP
    "torch>=2.2",
    "transformers>=4.40",
    "tokenizers>=0.15",
    "sentence-transformers>=2.6",
    "accelerate>=0.28",
    "datasets>=2.18",
    "evaluate>=0.4",

    # PySpark (local mode)
    "pyspark>=3.5",
    "pyarrow>=15.0",

    # RAG
    "faiss-cpu>=1.8",
    "rank-bm25>=0.2.2",

    # LLM + agents
    "langchain>=0.2",
    "langchain-community>=0.2",
    "langchain-core>=0.2",
    "langgraph>=0.1",
    "ollama>=0.2",

    # MLOps
    "mlflow>=2.12",
    "dvc>=3.50",
    "evidently>=0.4",

    # Serving
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "streamlit>=1.33",
    "httpx>=0.27",

    # Utilities
    "python-dotenv>=1.0",
    "rich>=13.7",
    "typer>=0.12",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]

ragas = [
    "ragas>=0.1",
]

[project.scripts]
psychiatrist = "psychiatrist.cli:app"

[tool.setuptools.packages.find]
include = ["psychiatrist*", "agents*", "models*", "rag*", "serving*", "monitoring*", "mlops*", "spark_jobs*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "C90"]
ignore = ["E501"]  # let black handle line length

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "safety: critical safety regression tests (must not fail)",
    "slow: tests that are slow or require model downloads",
    "integration: integration tests requiring services",
]
